<resources>

    <!--SplashscreenAcivity-->
    <string name="heritage_caps">HERITAGE</string>
    <string name="powered_by" translatable="false">Powered By</string>

    <!--for the splashIntro screen-->
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="got_it">Got It</string>
    <string name="page_number" translatable="false">page_number</string>
    <string name="splash_intro_displays" translatable="false">3</string>
    <string name="intro_caption_1">Know all about Indian Heritage</string>
    <string name="intro_caption_2">Real time updates based on Site Location</string>
    <string name="intro_caption_3">Get all the information at your Fingertips</string>


    <!--LaunchPreferenceManager-->
    <string name="launch_preferences" translatable="false">launch_preferences</string>
    <string name="IS_FIRST_TIME_LAUNCH" translatable="false">IsFirstTimeLaunch</string>

    <!--MenuActivity screen-->
    <string name="menu">Menu</string>
    <string name="package_list">My Packages</string>
    <string name="download_packages">Download More Packages</string>
    <string name="options">Options</string>
    <string name="working">"Working of Heritage"</string>
    <string name="downloading_instructions_header">"Downloading the Package"</string>
    <string name="selecting_package_header">Selecting the downloaded package</string>
    <string name="home_tab_instructions_header">HOME tab</string>
    <string name="nearby_tab_instructions_header">NEARBY tab</string>
    <string name="places_tab_instructions_header">PLACES tab</string>


    <!--OptionsActivity screen-->
    <string name="how_to_use">HOW TO USE</string>
    <string name="language">LANGUAGE</string>
    <string name="select_a_language">Select a Language</string>
    <string name="english" translatable="false">en</string>
    <string name="telugu" translatable="false">te</string>
    <string name="hindi" translatable="false">hi</string>
    <string name="available_languages_1" translatable="false">English</string>
    <string name="available_languages_2" translatable="false">తెలుగు</string>
    <string name="available_languages_3" translatable="false">हिंदी</string>

    <!--PackageListActivity screen-->
    <string name="my_heritage_sites">My Heritage Sites</string>
    <string name="download">Download</string>
    <string name="my_packages_1">Golconda</string>
    <string name="my_packages_2">Hampi</string>


    <!--PackageDownloaderActivity screen-->
    <string name="available_for_download">Click to download</string>
    <string name="package_download_url" translatable="false">http://preon.iiit.ac.in/~heritage/packages/</string>
    <string name="extracted_location" translatable="false">Android/data/in.ac.iiit.cvit.heritage/files/extracted/</string>
    <string name="compressed_location" translatable="false">Android/data/in.ac.iiit.cvit.heritage/files/compressed/</string>
    <string name="package_format" translatable="false">.tar.gz</string>
    <string name="xml_extension" translatable="false">.xml</string>
    <string name="downloading">Downloading the Package</string>
    <string name="loading">Loading Package</string>
    <string name="download_update">Download Update</string>
    <string name="load_update">Load Update</string>
    <string name="package_download_completed">Package Download Completed</string>
    <string name="package_load_completed">Package Loading Completed</string>
    <string name="ok">OK</string>
    <string name="click_to_view">"Click to view "</string>
    <string name="package_not_downloaded">Package could not be downloaded</string>
    <string name="package_not_loaded">Package could not be Loaded</string>
    <string name="do_you_want_to_download_the_package">\"Do you want to download the package \"</string>
    <string name="or_locate_it">"or Locate it in your mobile?"</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="download_file">Download</string>
    <string name="locate_file">Locate</string>
    <string name="download_packages_list_1">Golconda</string>
    <string name="download_packages_list_2">Hampi</string>



    <!--SessionManager-->
    <string name="user_session" translatable="false">UserSession</string>
    <string name="package_name" translatable="false">package_name</string>
    <string name="default_package_value" translatable="false"></string>


    <!--MainActivity-->
    <string name="app_name">Heritage</string>
    <string name="home">Home</string>
    <string name="nearby">Nearby</string>
    <string name="places">Places</string>

    <!--Home Tab-->
    <string name="home_golconda">
        Golconda, also known as Golkonda, Golconda (Round shaped hill), or Golla konda (Shepherd\'s hill), is a citadel and fort in Southern India and was the capital of the medieval sultanate of the Qutub Shahi dynasty (c.1518–1687), is situated 11 kilometres (6.8 mi) west of Hyderabad. It is also a tehsil of Hyderabad district, Telangana, India. The region is known for the mines that have produced some of the world\'s most famous gems, including the Koh-i-Noor, the Hope Diamond and the Nassak Diamond.
    </string>

    <!--Menu-->
    <string name="settings">Settings</string>
    <string name="about_us">About Us</string>

    <!--InstructionsActivity-->
    <string name="instructions">Instructions</string>
    <string name="general_instructions">General Instructions</string>
    <string name="menu_instructions">Menu has three buttons. \"My Packages\" button takes you to the list of packages that you have in your app. \"Download More Packages\" button takes you to the list of packages that are available for download. \"Options\" button takes to the list of options available for the app.</string>
    <string name="nearby_instructions">This tab shows the list of three monuments/sites that are nearest to you.</string>
    <string name="places_instructions">This tab shows the list of all the important monuments and sites that you have to see at the heritage site that you are in. To see more information about a particular listed monument or a site, you can click on it</string>
    <string name="home_instructions">In the HOME tab, you can see the information about the heritage site that you have selected.</string>
    <string name="selecting_package">After you are done downloading the package,go to \"My Packages\" in Menu and select the name of the package from the list of available packages. In the next screen you can see three tabs.</string>
    <string name="downloading_package">Click the package that you want to download. An alert dialog will ask you to choose either \"Download\" or  \"Locate\". If you click \"Download\", the relevant package will be downloaded. If you already have the package in your mobile, click \"Locate\" button to select the package from storage. For example Golconda will have a package name of golconda.tar.gz. Look for the similar package while looking in the storage </string>
    <string name="first_time_instructions" translatable="false">first_time</string>

    <!--InterestPointActivity-->
    <string name="images">Images</string>
    <string name="videos">Videos</string>
    <string name="audio">Audio</string>

    <!--ImagePageAdapter-->
    <string name="image_number" translatable="false">image_number</string>

    <!--clicked InterestPoint Title-->
    <string name="clicked_interest_point" translatable="false">interest_point</string>

    <!--xml tags-->
    <string name="interest_point_title" translatable="false">title</string>
    <string name="interest_point_latitude" translatable="false">lat</string>
    <string name="interest_point_longitude" translatable="false">long</string>
    <string name="interest_point_caption" translatable="false">caption</string>
    <string name="interest_point_image" translatable="false">image</string>
    <string name="interest_point_images" translatable="false">images</string>
    <string name="interest_point_info" translatable="false">info</string>

    <!--Others-->
    <string name="images_name_splitter" translatable="false">,</string>
    <string name="image_type" translatable="false">.JPG</string>
    <string name="packageNameKey" translatable="false">package</string>

</resources>
